Creating new timetypes service which helps to define the different types and its properties. Summing up the hours per type. Removing the private time var, as we have it already as one of the timeTypes. Making it possible to order the elements and fixing the display flickering when changing entries. Now the stats nicely grow or shrink accordingly. Pretty nice. Removing the beta state, doesn't help anymore. We are constantly improving here.

--- a/less/cyclone.less
+++ b/less/cyclone.less
@@ -121,6 +121,10 @@
         background-color: #ffdb6e;
         border-bottom: 1px solid orange;
     }
+    .project-type--trust md-card{
+        background-color: #e1c2e6;
+        border-bottom: 1px solid #9724e6;
+    }
     .project-type--private md-card{
         background-color: lightblue;
         border-bottom: 1px solid blue;
@@ -222,7 +226,7 @@ md-radio-button {
 
     @media only screen and (min-width: 960px) {
         position: fixed;
-        bottom: 64px;
+        bottom: 95px;
         width: 100%;
         z-index: 100;
         transition: transform 500ms;
@@ -240,15 +244,14 @@ md-radio-button {
         transform: translateY(40%);
     }
 }
-.stats-totals > div {
-    display: inline-block;
-    border: 1px solid white;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 3px;
 
-    &:first-child {
-        border: none;
+.stats-totals {
+    text-align: left;
+    width: 90%;
+    margin: 0 auto;
+
+    .day-visualize {
+        width: 100%;
     }
 }
 
@@ -297,7 +300,7 @@ md-radio-button {
 .day-visualize {
     width: 90%;
     text-align: center;
-    margin: 0px 10px 20px;
+    margin: 0px auto 20px;
 
     display: flex;
     align-items: flex-end;
@@ -360,7 +363,6 @@ button.dayVisualize-entry.md-button.md-button:hover {
 
 .day-visualize.project-sum {
     transition: all 1s;
-    margin: 0 10px;
 }
 .footer-stats.open .dayVisualize.project-sum {
     height: 100%;
